added salsakl logo and change image to squarish along with change of tagline

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://www.salsakl.com
 title: Salsa KL
-subtitle: The Place For Your One Stop Salsa Information in Kuala Lumpur
+subtitle: Essentials Of The Universal Dance Language In Kuala Lumpur, Malaysia
 author: Salsa KL
 simple_search: http://google.com/search
 description:
