modified some general layout

--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # ----------------------- #
 
 url: http://www.salsakl.com
-title: Salsa KL
-subtitle: Essentials Of The Universal Dance Language In Kuala Lumpur, Malaysia
+title: Salsa KL Write-Ups
+subtitle: On The Essentials Of The Universal Dance Language In Kuala Lumpur, Malaysia
 author: Salsa KL
-simple_search: http://google.com/search
+simple_search:
 description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
