added salsakl logo and new favicon and also added mainurl for config file

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.salsakl.com
+url: http://blog.salsakl.com
+mainurl: http://www.salsakl.com
 title: Salsa KL Write-Ups
 subtitle: On The Essentials Of The Universal Dance Language In Kuala Lumpur, Malaysia
 author: Salsa KL
