--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://blog.salsakl.com
 mainurl: http://www.salsakl.com
-title: Salsa KL Write-Ups
+title: Salsa KL Blog
 subtitle: On The Essentials Of The Universal Dance Language In Kuala Lumpur, Malaysia
 author: Salsa KL
 simple_search:
